# release-craftsman

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: rust-build.yml
src/: command_line_model.rs  file_reader.rs  git_log_format.rs  main.rs  output_file_format.rs
src/argparser/: arg_parser.rs  mod.rs
src/filereader/: file_reader.rs  mod.rs
src/gitrunner/: git_runner.rs  git_runner_error.rs  mod.rs
src/gptrunner/: gpt_runner.rs  mod.rs
src/interactivity/: interactive.rs
src/prompts/: detailed_notes_advanced.txt  general_release_notes_json.txt  general_release_notes_json.txt~  general_release_notes_markdown.txt
