[package]
name = "releasecraftsman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chat-gpt-lib-rs = "0.2.1"
tokio = { version = "1.32.0", features = ["full"] }
include_dir = "0.7.3"
spinoff = "0.8.0"